Font-size change

--- a/trivia.html
+++ b/trivia.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous">
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/simple-grid.css" /> -->
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
-    <script src="https://www.w3schools.com/lib/w3.js"></script>
+    <script src="js/w3.js"></script>
 </head>
 <body class="">
     <section class="hero is-dark is-medium trivia-hero">
@@ -49,10 +49,37 @@
         </div>
     </section>
 <div w3-include-html="partials/footer.html"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <script>
         w3.includeHTML();
     </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
 
+            // Get all "navbar-burger" elements
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+            // Check if there are any navbar burgers
+            if ($navbarBurgers.length > 0) {
+
+                // Add a click event on each of them
+                $navbarBurgers.forEach(el => {
+                    el.addEventListener('click', () => {
+
+                        // Get the target from the "data-target" attribute
+                        const target = el.dataset.target;
+                        const $target = document.getElementById(target);
+
+                        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+                        el.classList.toggle('is-active');
+                        $target.classList.toggle('is-active');
+
+                    });
+                });
+            }
+
+        });
+    </script>
 </body>
 </html>
