--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
     </nav> -->
     <div class="columns">
         <div class="column is-4 meme-side has-text-centered is-success">
-            <h2 class="my-title">I stand with Udom</h2>
-            <p class="my-subtitle">Show Your Support. Join The Movement. Create Your Own Meme</p>
-            <a class="button is-white is-rounded is-outlined" href="meme.html">Get Yours &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
+            <h2 class="my-title">UDOM IS WORKING</h2>
+            <p class="my-subtitle">View the outstanding projects we’ve completed together</p>
+            <a class="button is-white is-rounded is-outlined is-medium" href="meme.html">View Projects &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
         </div>
         <div class="column is-4 video-side has-text-centered is-info">
-            <h2 class="my-title">Ibom Trivia</h2>
-            <p class="my-subtitle">Show how much you know about Akwa Ibom.</p>
-            <a href="trivia.html" class="button is-white is-rounded is-outlined">Go to Trivia Quiz &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
+            <h2 class="my-title">RISE FOR UDOM, <br>RISE FOR AKWA IBOM</h2>
+            <p class="my-subtitle">Show Your Support, Take The Pledge, Create Your Banner</p>
+            <a href="trivia.html" class="button is-white is-rounded is-outlined is-medium">Create your banner &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
         </div>
         <div class="column is-4 emoji-side has-text-centered">
-            <h2 class="my-title">Sights & Sounds</h2>
-            <p class="my-subtitle">See a amzing showcase of the beauty in the Land of Promise.</p>
-            <a class="button is-white is-rounded is-outlined" href="gallery.html">See Gallery &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
+            <h2 class="my-title">VIEW THE MANIFESTO</h2>
+            <p class="my-subtitle">Share The Manifesto</p>
+            <a class="button is-white is-rounded is-outlined is-medium" href="gallery.html">Share The Manifesto &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
         </div>
     </div>
     </section>
