--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
         <div class="column is-4 meme-side has-text-centered is-success">
             <h2 class="my-title">UDOM IS WORKING</h2>
             <p class="my-subtitle">View the outstanding projects we’ve completed together</p>
-            <a class="button is-white is-rounded is-outlined is-medium" href="meme.html">View Projects &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
+            <a class="button is-white is-rounded is-outlined is-medium" href="#">View Projects &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
         </div>
         <div class="column is-4 video-side has-text-centered is-info">
             <h2 class="my-title">RISE FOR UDOM, <br>RISE FOR AKWA IBOM</h2>
             <p class="my-subtitle">Show Your Support, Take The Pledge, Create Your Banner</p>
-            <a href="trivia.html" class="button is-white is-rounded is-outlined is-medium">Create your banner &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
+            <a href="#" class="button is-white is-rounded is-outlined is-medium">Create your banner &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
         </div>
         <div class="column is-4 emoji-side has-text-centered">
             <h2 class="my-title">VIEW THE MANIFESTO</h2>
             <p class="my-subtitle">Share The Manifesto</p>
-            <a class="button is-white is-rounded is-outlined is-medium" href="gallery.html">Share The Manifesto &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
+            <a class="button is-white is-rounded is-outlined is-medium" href="#">Share The Manifesto &nbsp;<span class="icon"><i class="fa fa-arrow-right"></i></span></a>
         </div>
     </div>
     </section>
