--- a/index.html
+++ b/index.html
@@ -12,29 +12,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
         crossorigin="anonymous">
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/simple-grid.css" /> -->
-    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link href="fonts/circular-font.css" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 <body>
-    <!-- <section class="hero">
-        <div class="row">
-            <div class="col-4 meme-side">
-                <h2 class="title">The Naija Spirit</h2>
-                <p class="subtitle">Show Your Support. Join The Movement. Create Your Own Meme</p>
-                <a class="button is-medium is-rounded">Get Yours</a>
-            </div>
-            <div class="col-4 video-side">
-                <h2 class="title">The Naija Spirit</h2>
-                <p class="subtitle">Show Your Support. Join The Movement. Create Your Own Meme</p>
-                <a class="button is-medium is-rounded">Get Yours</a>
-            </div>
-            <div class="col-4 emoji-side">
-                <h2 class="title">The Naija Spirit</h2>
-                <p class="subtitle">Show Your Support. Join The Movement. Create Your Own Meme</p>
-                <a class="button is-medium is-rounded">Get Yours</a>
-            </div>
-        </div>
-    </section> -->
+    
     <section class="main-plane is-fullheight is-dark">
 
         <div class="container">
